--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "node": ">=8.9.0"
   },
   "dependencies": {
-    "@tensorflow/tfjs": "^0.12.5",
+    "@tensorflow/tfjs": "^0.12.6",
     "vega-embed": "^3.0.0"
   },
   "scripts": {
     "build": "cross-env NODE_ENV=production parcel build index.html --no-minify --public-url ./",
-    "watch": "./serve.sh",
-    "postinstall": "yarn upgrade --pattern @tensorflow"
+    "link-local": "yalc link",
+    "postinstall": "yarn upgrade --pattern @tensorflow",
+    "watch": "./serve.sh"
   },
   "devDependencies": {
     "babel-plugin-transform-runtime": "~6.23.0",
@@ -25,6 +26,7 @@
     "cross-env": "^5.1.6",
     "http-server": "~0.10.0",
     "parcel-bundler": "~1.8.1",
-    "typescript": "^2.9.2"
+    "typescript": "^2.9.2",
+    "yalc": "~1.0.0-pre.22"
   }
 }
