--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "tfjs-examples-cart-pole",
-  "version": "0.1.0",
-  "description": "",
+  "name": "tfjs-knapsack-rl",
+  "version": "0.0.1",
+  "description": "reinforcement learner for solving knapsack problem",
   "main": "index.js",
   "license": "Apache-2.0",
   "private": true,
