--- a/package.json
+++ b/package.json
@@ -20,10 +20,14 @@
   "devDependencies": {
     "@babel/core": "^7.0.0-0",
     "@babel/plugin-transform-runtime": "^7.1.0",
-    "babel-preset-env": "~1.6.1",
+    "@babel/preset-env": "^7.11.0",
+    "@tensorflow/tfjs-node": "^2.1.0",
+    "babel-jest": "^26.2.2",
     "clang-format": "~1.2.2",
     "cross-env": "^5.1.6",
     "http-server": "~0.10.0",
+    "jest": "^26.2.2",
+    "jest-diff": "^26.2.0",
     "parcel-bundler": "~1.10.3",
     "typescript": "^2.9.2",
     "yalc": "~1.0.0-pre.22"
