--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
     "parcel-bundler": "~1.10.3",
     "typescript": "^2.9.2",
     "yalc": "~1.0.0-pre.22"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
